--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,2 +1,4 @@
-<h1>KaiAko</h1>
-<p>Welcome to the KaiAko learning management system.</p>
+<div class="container">
+  <h1>KaiAko</h1>
+  <p>Welcome to the KaiAko learning management system.</p>
+</div>
