Add basic GitHub login and remove excess folders/files
Added sessions and profile controllers; profile show method for the
user's profile; sessions new, create, and destroy methods for handling
login; current_user and logged_in application controller/helper
methods; and associated views. Also, application.yml with GitHub keys.
And, of course, the User model.

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,4 +1,11 @@
 <div class="container">
   <h1>KaiAko</h1>
   <p>Welcome to the KaiAko learning management system.</p>
+
+  <% if logged_in? %>
+    <%= link_to current_user.name, profile_path(current_user) %>
+    <%= link_to 'Log Out', logout_path %>
+  <% else %>
+    <%= link_to 'Log In with Github', login_path %>
+  <% end %>
 </div>
